<resources>
    <string name="app_name">MovieBookingStudetProject</string>
    <string name="cinema">Cinema</string>
    <string name="lbl_phone_verify">Verify Your Phone Number</string>
    <string name="lbl_digit_code_send_msg">We will send 6-digits sms code\nto verify ypur phone number</string>
    <string name="lbl_mobile_number">Mobile Number</string>
    <string name="lbl_phone_number">9763695493</string>
    <string name="ibl_country_code">Country Code</string>
    <string name="lbl_team_condition">By clicking, I accept Terms Condition Privacy Policy</string>
    <string name="lbl_otp_1">1</string>
    <string name="lbl_resend_code">Resend Code</string>
    <string name="lbl_don_t_receive_otp">Don\'t receive OTP?</string>
    <string name="lbl_confirm_otp">Confirm OTP</string>
    <string name="lbl_enter_otp_code">Enter OTP Code</string>
    <string name="lbl_pick_region">Pick Region</string>
    <string name="lbl_cities">Cities</string>
    <string name="lbl_yangon">Yangon</string>
    <string name="ll_search">Search</string>
    <string name="near_me">Near Me</string>
    <string name="lbl_scan">Sca</string>
    <string name="lbl_noti">Notification</string>
    <string name="movies">Movies</string>
    <string name="lbl_cinema">Cinema</string>
    <string name="lbl_ticket">Tickets</string>
    <string name="lbl_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_censor_rating">Censor Rating</string>
    <string name="lbl_release_date_details">Release Data</string>
    <string name="lbl_duration_details">Duration</string>
    <string name="lbl_notify_as_soon_as_movies_details">Get notify as soon as movie\nbooking opens up in your city!</string>
    <string name="lbl_set_notification_txt">Set Notification</string>
    <string name="lbl_story_line">Story Line</string>
    <string name="lbl_movie_description">In the 1970s, young Gru tries to join a group of supervillains called the Vicious 6 after they oust their leader -- the legendary fighter Wild Knuckles. When the interview turns disastrous, Gru and his Minions go on the run with the Vicious 6 hot on their tails. Luckily, he finds an unlikely source for guidance -- Wild Knuckles himself -- and soon discovers that even bad guys need a little help from their friends.</string>
    <string name="lbl_see_details">See Detail</string>
    <string name="lbl_parking">Parking</string>
    <string name="lbl_online_food">Online Food</string>
    <string name="lbl_wheel_chair">Wheel Chair</string>
    <string name="lbl_long_press_on_show_timing">Long press on show timing to see seat class!</string>
    <string name="screen">SCREEN</string>
    <string name="lbl_available">Available</string>
    <string name="lbl_taken">Taken</string>
    <string name="lbl_your_selection">Your Selection</string>
    <string name="lbl_grab_a_bite">Grab a bite!</string>
    <string name="lbl_checkout">Checkout</string>
    <string name="lbl_closed_bracket">)</string>
    <string name="lbl_food_and_beverage">Food and Beverage</string>
    <string name="lbl_convenience_fee">Convenience Fee</string>
    <string name="lbl_total">Total</string>
    <string name="lbl_refund_amount">Refund Amount</string>
    <string name="lbl_payment">Payment</string>
    <string name="lbl_enter_your_name">Enter your name</string>
    <string name="lbl_choose_your_payment_type">Choose your payment type</string>
    <string name="lbl_ticket_confirmation">TicketConfirmation</string>
    <string name="lbl_tpin">TPIN :</string>
    <string name="lbl_cinema_detail">Cinema Detail</string>
    <string name="lbl_facilities">Facilities</string>
    <string name="lbl_ticket_cancellation">Ticket Cancellation</string>
    <string name="lbl_safety">Safety</string>
</resources>