<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent"
    tools:context=".activities.OTPActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivC"
        android:layout_width="@dimen/width_splash_logo_big"
        android:layout_height="@dimen/height_splash_logo_big"
        android:layout_marginTop="@dimen/margin_top_countryCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/c_splash" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivVideoIcon"
        android:layout_width="@dimen/width_splash_logo_icon"
        android:layout_height="@dimen/height_splash_logo_icon"
        app:layout_constraintBottom_toBottomOf="@id/ivC"
        app:layout_constraintEnd_toEndOf="@id/ivC"
        app:layout_constraintStart_toStartOf="@id/ivC"
        app:layout_constraintTop_toTopOf="@id/ivC"
        app:srcCompat="@drawable/video_icon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPhoneVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivC"
        android:text="@string/lbl_phone_verify"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/text_regular_3x"
        android:layout_marginTop="@dimen/margin_xxlarge"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSendDigitCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvPhoneVerify"
        android:text="@string/lbl_digit_code_send_msg"
        android:layout_marginTop="@dimen/margin_medium"
        android:textColor="@color/textColorGrey"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCountryCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_enter_otp_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSendDigitCode"
        android:layout_marginStart="@dimen/margin_medium_3"
        android:textColor="@color/textColorGrey"
        android:textSize="@dimen/text_small"
        android:layout_marginTop="@dimen/margin_50_dp"/>

   <LinearLayout
       android:id="@+id/llOtpView"
       android:layout_marginTop="@dimen/margin_medium"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/tvCountryCode"
       android:layout_marginStart="@dimen/margin_large"
       android:layout_marginEnd="@dimen/margin_large">
       <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etOtpOne"
           android:layout_width="0dp"
           android:layout_height="40dp"
           android:text="@string/lbl_otp_1"
           android:gravity="center"
           android:layout_weight="1"
           android:background="@drawable/otp_bg"
           android:textColor="@color/black"/>
       <androidx.appcompat.widget.AppCompatEditText
           android:id="@+id/etOtpTwo"
           android:layout_marginStart="5dp"
           android:layout_width="0dp"
           android:layout_height="40dp"
           android:text="@string/lbl_otp_1"
           android:gravity="center"
           android:layout_weight="1"
           android:background="@drawable/otp_bg"
           android:textColor="@color/black"/>
       <androidx.appcompat.widget.AppCompatEditText
           android:id="@+id/etOtpThree"
           android:layout_marginStart="5dp"
           android:layout_width="0dp"
           android:layout_height="40dp"
           android:text="@string/lbl_otp_1"
           android:gravity="center"
           android:layout_weight="1"
           android:background="@drawable/otp_bg"
           android:textColor="@color/black"/>
       <androidx.appcompat.widget.AppCompatEditText
           android:id="@+id/etOtpFour"
           android:layout_marginStart="5dp"
           android:layout_width="0dp"
           android:layout_height="40dp"
           android:text="@string/lbl_otp_1"
           android:gravity="center"
           android:layout_weight="1"
           android:background="@drawable/otp_bg"
           android:textColor="@color/black"/>
       <androidx.appcompat.widget.AppCompatEditText
           android:id="@+id/etOtpFive"
           android:layout_marginStart="5dp"
           android:layout_width="0dp"
           android:layout_height="40dp"
           android:text="@string/lbl_otp_1"
           android:gravity="center"
           android:layout_weight="1"
           android:background="@drawable/otp_bg"
           android:textColor="@color/black"/>
       <androidx.appcompat.widget.AppCompatEditText
           android:id="@+id/etOtpSix"
           android:layout_marginStart="5dp"
           android:layout_width="0dp"
           android:layout_height="40dp"
           android:text="@string/lbl_otp_1"
           android:gravity="center"
           android:layout_weight="1"
           android:background="@drawable/otp_bg"
           android:textColor="@color/black"/>
   </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvResentOtpOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_don_t_receive_otp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llOtpView"
        android:textColor="@color/white"
        android:textSize="@dimen/text_small"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_100_dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvResentOtpTwo"
        app:layout_constraintStart_toEndOf="@id/tvResentOtpOne"
        android:text="@string/lbl_resend_code"
        android:textColor="@color/button_color"
        android:layout_marginStart="@dimen/margin_medium"
        app:layout_constraintTop_toTopOf="@id/tvResentOtpOne"
        app:layout_constraintBottom_toBottomOf="@id/tvResentOtpOne"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirmOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium_3"
        android:layout_marginEnd="@dimen/margin_medium_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tvResentOtpOne"
        android:background="@drawable/button_radius_bg"
        android:text="@string/lbl_confirm_otp"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/margin_xlarge"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_team_condition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/textColorGrey"
        android:layout_marginStart="@dimen/margin_medium_3"
        android:layout_marginEnd="@dimen/margin_medium_3"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/margin_medium_2"/>

</androidx.constraintlayout.widget.ConstraintLayout>