<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:paddingStart="@dimen/margin_large"
    android:paddingTop="15dp"
    android:paddingEnd="@dimen/margin_large">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCinemaNameMoviesCinema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:textColor="@color/white"
        android:text="JCGV : Junction City"
         />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSeeDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/lbl_see_details"
        android:textColor="@color/button_color"
        android:textSize="@dimen/text_regular" />

    <LinearLayout
        android:id="@+id/llCinemaStuffs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCinemaNameMoviesCinema"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="21dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/icon_parking" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_card_medium"
                android:text="@string/lbl_parking"
                android:textColor="@color/textColorGrey"
                android:textSize="@dimen/text_regular" />
        </LinearLayout>

      <LinearLayout
          android:layout_weight="1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
          <androidx.appcompat.widget.AppCompatImageView
              android:layout_width="17dp"
              android:layout_height="17dp"
              android:layout_marginStart="17dp"
              android:scaleType="centerCrop"
              app:srcCompat="@drawable/icon_food" />

          <androidx.appcompat.widget.AppCompatTextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/margin_card_medium"
              android:text="@string/lbl_online_food"
              android:textColor="@color/textColorGrey"
              android:textSize="@dimen/text_regular" />
      </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginStart="17dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/icon_wheel_chair" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_card_medium"
            android:text="@string/lbl_wheel_chair"
            android:textColor="@color/textColorGrey"
            android:textSize="@dimen/text_regular" />
    </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCinemaTimesMoviesCinema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llCinemaStuffs"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:paddingBottom="25dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/llLongPressMoviesCinema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rvCinemaTimesMoviesCinema"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="30dp"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_baseline_info_grey_16dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_card_medium"
            android:text="@string/lbl_long_press_on_show_timing"
            android:textColor="@color/textColorGrey"
            android:textSize="@dimen/text_regular" />

    </LinearLayout>

</RelativeLayout>