<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.CenimaDetailActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/appBarCinemaDetail"
        layout="@layout/app_bar_cenima_detail" />
<FrameLayout
    android:background="#888888"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/flVidioViewContainer"
    android:layout_below="@id/appBarCinemaDetail">
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnPlayCinema"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_play_arrow_white_22dp"
        android:backgroundTint="#888888"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:id="@+id/vvCinema"
        />

</FrameLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCinemaNameCinemaInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flVidioViewContainer"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/margin_22dp"
        android:layout_marginTop="@dimen/margin_25dp"
        android:layout_marginEnd="@dimen/margin_22dp"
        android:text="JCGV : Junction City"
        android:textColor="@color/white"
        android:textSize="@dimen/text_regular_2x" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLocationCinemaInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCinemaNameCinemaInfo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/margin_22dp"
        android:layout_marginTop="@dimen/margin_15dp"
        android:layout_marginEnd="@dimen/margin_120dp"
        android:text="Q5H3+JPP, Corner of, Bogyoke Lann, Yangon"
        android:textColor="@color/white"
        android:textSize="@dimen/text_18sp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnLocationCinemaInfo"
        android:layout_width="@dimen/margin_50_dp"
        android:layout_height="@dimen/margin_50_dp"
        android:layout_below="@+id/tvCinemaNameCinemaInfo"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/margin_medium_3"
        android:layout_marginEnd="22dp"
        android:src="@drawable/location_button_accent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFacilitiesLabelCinemaInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLocationCinemaInfo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/margin_22dp"
        android:layout_marginTop="@dimen/margin_40dp"
        android:text="@string/lbl_facilities"
        android:textColor="@color/white"
        android:textSize="@dimen/text_18sp" />
    <LinearLayout
        android:id="@+id/llFacilitiesOneCinemaInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFacilitiesLabelCinemaInfo"
        android:layout_marginStart="@dimen/margin_22dp"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_22dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/width_icon_facilities"
            android:layout_height="@dimen/height_icon_facilities"
            android:layout_gravity="center_vertical"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/icon_parking_accent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_card_medium"
            android:text="@string/lbl_parking"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_regular" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/width_icon_facilities"
            android:layout_height="@dimen/height_icon_facilities"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_15dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/icon_online_food_accent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_card_medium"
            android:text="@string/lbl_online_food"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_regular" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/width_icon_facilities"
            android:layout_height="@dimen/height_icon_facilities"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_15dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/icon_wheel_chair_accent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_card_medium"
            android:text="@string/lbl_wheel_chair"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_regular" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFacilitiesTwoCinemaInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llFacilitiesOneCinemaInfo"
        android:layout_marginStart="@dimen/margin_22dp"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_22dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/width_icon_facilities"
            android:layout_height="@dimen/height_icon_facilities"
            android:layout_gravity="center_vertical"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/icon_cancellation_accent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_card_medium"
            android:text="@string/lbl_ticket_cancellation"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_regular" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSafetyLabelCinemaInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llFacilitiesTwoCinemaInfo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/margin_22dp"
        android:layout_marginTop="@dimen/margin_40dp"
        android:text="@string/lbl_safety"
        android:textColor="@color/white"
        android:textSize="@dimen/text_18sp" />

</RelativeLayout>

</ScrollView>